# recommender_systems

./: .gitignore  .tt.swp  .tt1.swp  README.md  create_soft_links.py  eda_transformed.py  pyproject.toml  pytest.ini  recommender-systems-with-tfx-components.ipynb  recommender-systems-with-tfx-pipelines.ipynb  recommender-systems-with-tfx-pipelines.ipynb.dvc  recommender-systems.ipynb  recommender-systems.ipynb.dvc  recommenders_with_tfx_pipeline_local.ipynb  recommenders_with_tfx_pipeline_local.ipynb.dvc  reqs.txt  requirements.txt  setup.py  todo.txt  tt1  tt2  tt_err  write_train_val_test_splits.py
docs/miscNotes/: saved_model_cli.txt
docs/mlops/: analysis.txt  design.txt  future_tasks.txt  model_analysis.txt  model_results_analysis.txt  notes.txt  notes_ingest_3_inputs.tx  notes_vectordb.txt  reqs.txt  tt
docs/mlops/best_fitting_model_stats/twotowderdnn_softmax/: best_hyperparameters.txt
src/drafts/python/: __init__.py  ingest_movie_lens_custom_component.py  ingest_movie_lens_pyarrow.py  ingest_movie_lens_tfx.py  transform_movie_lens.py  transform_movie_lens_tft.py
src/drafts/python/movie_lens_tfx/utils/: ingest_movie_lens_beam.py
src/main/python/: CustomUTF8Coder.py  infile_dict_util.py  ingest.py  ingest_beam.py  ingest_movie_lens_1m_beam.py  ingest_movie_lens_1m_tfx.py  ingest_movie_lens_beam.py  ingest_movie_lens_beam_pa.py  ingest_movie_lens_component.py  ingest_movie_lens_custom_component.py  ingest_movie_lens_tfx.py  ingest_movielens_1m.py  kaggle_conda_setup.py  movie_lens_utils.py  partition_funcs.py  pipeline_movie_lens.py  pipeline_movie_lens_1m.py  stringify_ingest_params.py  transform_movie_lens.py  transform_ratings.py  transform_ratings_tfx.py
src/main/python/eda/: eda_raw.py  eda_transformed.py  eda_transformed_pyspark_mllib.py
src/main/python/movie_lens_tfx/: PipelineComponentsFactory.py  ingest_movie_lens_beam.py  ingest_movie_lens_beam_pa.py  ingest_movie_lens_component.py  ingest_movie_lens_custom_component.py  pyproject.toml  transform_movie_lens.py  transform_movie_lens_metadata.py  tune_train_movie_lens.py  tune_train_movie_lens_hitrate.py  tune_train_movie_lens_metadata.py
src/main/python/movie_lens_tfx/bulk_infer_component/: BulkInferrerBeam.py  tfx_bsl_public_run_inference.py  tfx_bsl_run_inference.py
src/main/python/movie_lens_tfx/ingest_already_split_pyfunc_component/: ingest_already_split_movie_lens_component.py
src/main/python/movie_lens_tfx/ingest_component/: ingest_movie_lens_custom_component.py
src/main/python/movie_lens_tfx/ingest_pyfunc_component/: ingest_movie_lens_component.py
src/main/python/movie_lens_tfx/misc/: ingest_movie_lens_beam_pa.py  tfrecord_to_parquet.py
src/main/python/movie_lens_tfx/num_examples_component/: num_examples_component.py
src/main/python/movie_lens_tfx/utils/: CustomUTF8Coder.py  inferrence_data_prep.py  ingest_movie_lens_beam.py  movie_lens_utils.py
src/main/resources/ml-1m/: README  README_splits.txt
src/main/resources/post_transform/: schema.pbtxt
src/main/resources/pre_transform/: schema.pbtxt
src/test/: __init__.py
src/test/python/: IngestMovieLensComponentTest.py  __init__.py  csv_example_gen_test.py  dataset_tfxio_example.py  helper.py  infile_dict_util_test.py  ingest_movie_lens_beam_pa_test.py  ingest_movie_lens_beam_test.py  ingest_movie_lens_component_test.py  ingest_movie_lens_custom_component_test.py  movie_lens_utils_test.py  test_tft.py  transform_movie_lens_test.py
src/test/python/movie_lens_tfx/: RenumberIds.py  TmpTest.py  TmpTest2.py  TransformFnTest.py  WriteMovieUsersTFRecords.py  WriteRankerInputArrayRecords.py  WriteRetrievalInputParquet.py  WriteRetrievalInputTFRecords.py  WriteRetrievalInputs.py  all_pipeline_components_test.py  csv_example_gen_test.py  dataset_tfxio_example.py  helper.py  ingest_movie_lens_beam_pa_test.py  ingest_movie_lens_beam_test.py  ingest_movie_lens_component_test.py  ingest_movie_lens_custom_component_test.py  make_single_genre_datasets.py  movie_lens_split_example_gen_test.py  movie_lens_utils_test.py  pipelines_test.py  run_kaggle_metadata_pipelines.py  run_kaggle_pipelines.py  shifts_nannyml.py  tmp_test.py  tmp_test2.py  train_val_test_splitter.py  transform_movie_lens_test.py  tune_train_movie_lens_test.py  write_liked_disliked_ratings.py  write_liked_ratings.py  write_single_genre_datasets.py  write_train_val_test_splits.py  write_train_val_test_splits_by_user.py
src/test/resources/: serving_model_README.txt
src/test/resources/ml-1m/small/: ratings_train_liked.array_record  ratings_val_liked.array_record
src/test/resources/serving_model/: serving_model_README.txt
src/test/resources/serving_model/1774483738/: fingerprint.pb  saved_model.pb
src/test/resources/serving_model/1774483738/variables/: variables.data-00000-of-00001  variables.index
src/test/resources/serving_model/1774809061/variables/: variables.data-00000-of-00001
src/test/resources/serving_model/BEST/: fingerprint.pb  saved_model.pb
src/test/resources/serving_model/BEST/variables/: variables.data-00000-of-00001  variables.index
